RESOLVED FIXED135309
Creating incorrect sandbox extension for hsts plist due to missing /
https://bugs.webkit.org/show_bug.cgi?id=135309
Summary Creating incorrect sandbox extension for hsts plist due to missing /
Oliver Hunt
Reported 2014-07-25 16:09:51 PDT
Creating incorrect sandbox extension for hsts plist due to missing /
Attachments
Patch (1.49 KB, patch)
2014-07-25 16:10 PDT, Oliver Hunt
oliver: review+
Oliver Hunt
Comment 1 2014-07-25 16:10:55 PDT
Oliver Hunt
Comment 2 2014-07-25 16:15:44 PDT
Comment on attachment 235549 [details] Patch r=weinig
Geoffrey Garen
Comment 3 2014-07-25 16:16:41 PDT
Comment on attachment 235549 [details] Patch r=me too Best bug.
Oliver Hunt
Comment 4 2014-07-25 16:18:49 PDT
Note You need to log in before you can comment on or make changes to this bug.