Creating incorrect sandbox extension for hsts plist due to missing / https://bugs.webkit.org/show_bug.cgi?id=135309

Reviewed by Sam Weinig.

So it turns out that you do actually need /'s in paths...
Now we actually create the correct extension.

* UIProcess/mac/WebContextMac.mm:
(WebKit::WebContext::platformDefaultNetworkingHSTSDatabasePath):

Canonical link: https://commits.webkit.org/153202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171629 268f45cc-cd09-0410-ab3c-d52691b4dbfc